[package]
name = "exchange-bdd-scenarios"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dependencies]
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
cucumber_rust = "0.9"
